[tool.poetry]
name = "godaddy-ip-sync"
version = "0.1.0"
description = ""
authors = ["Chanuk Kim <cksdnr987@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-discord-logger = "^1.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
